metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CloseDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__CloseDate__c</fullName>
    <description>OOB this is the same CloseDate as on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Date when the Referral is closed.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>