metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ClosedLostReason__c.field-meta.xml
<CustomField>
    <fullName>workspan__ClosedLostReason__c</fullName>
    <description>AWS requires a reason for every opportunity that is being closed lost.</description>
    <inlineHelpText>The reason why the opportunity was closed lost.</inlineHelpText>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Deficiency</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Delay / Cancellation of Project</fullName>
            </value>
            <value>
                <fullName>Financial/Commercial</fullName>
            </value>
            <value>
                <fullName>Legal / Tax / Regulatory</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor – Google</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor – Microsoft</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor – SoftLayer</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor – VMWare</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor – Other</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>On Premises Deployment</fullName>
            </value>
            <value>
                <fullName>Partner Gap</fullName>
            </value>
            <value>
                <fullName>People/Relationship/Governance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product/Technology</fullName>
            </value>
            <value>
                <fullName>Security / Compliance</fullName>
            </value>
            <value>
                <fullName>Technical Limitations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1 - Project budget isn’t adequate</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Customer didn’t respond</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Customer chose another vendor</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Customer requirement not met</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Not a customer</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6 - Proposed time line was too short</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7 - Report as abuse, spam, or phishing</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 - Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>