metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ClosedLostReasonPopulatedBy__c.field-meta.xml
<CustomField>
    <fullName>workspan__ClosedLostReasonPopulatedBy__c</fullName>
    <label>Closed Lost Reason Populated By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>