metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>workspan__ContractExpiryDate__c</fullName>
    <description>OOB this is the same ExpirationDate as on the Contract under the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Date when your contract expires</inlineHelpText>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>