metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>workspan__ContractTerm__c</fullName>
    <description>Terms of Contract in Years / Months format</description>
    <inlineHelpText>Terms of Contract in Years / Months format</inlineHelpText>
    <label>Contract Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>