metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CreatedOn__c.field-meta.xml
<CustomField>
    <fullName>workspan__CreatedOn__c</fullName>
    <description>Always sent from WorkSpan, can&apos;t be changed in Salesforce.</description>
    <inlineHelpText>Date/time when the Referral was created in WS</inlineHelpText>
    <label>WS Created Date</label>
    <type>DateTime</type>
</CustomField>