metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CRMAccount__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OOB this is the same Account as on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Account associated with the Referral</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>