metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CRMAccountName__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMAccountName__c</fullName>
    <description>OOB this is the Name of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Name of the Account that is associated with the Referral</inlineHelpText>
    <label>CRM Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>