metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CRMLeadID__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMLeadID__c</fullName>
    <inlineHelpText>Unique identifier of the lead that led to this opportunity.</inlineHelpText>
    <label>CRM Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>