metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CRMOpportunityURL__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMOpportunityURL__c</fullName>
    <description>A link to the Opportunity that is linked to the Referral in the CRM.</description>
    <inlineHelpText>A link to the Opportunity that is linked to the Referral in the CRM</inlineHelpText>
    <label>CRM Opportunity URL</label>
    <type>Url</type>
</CustomField>