metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CRMReferralURL__c.field-meta.xml
<CustomField>
    <fullName>workspan__CRMReferralURL__c</fullName>
    <description>A link to the Referral in the CRM.</description>
    <inlineHelpText>A link to the Referral in the CRM</inlineHelpText>
    <label>CRM Referral URL</label>
    <type>Url</type>
</CustomField>