metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerCity__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerCity__c</fullName>
    <description>OOB this is the BillingCity of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Address of the end customer on the Referral - City</inlineHelpText>
    <label>Customer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>