metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerContactEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerContactEmail__c</fullName>
    <description>OOB this is the Email of the Primary Contact if one is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Customer Contact Details - Business Email Address of the customer contact</inlineHelpText>
    <label>Customer Contact Email</label>
    <type>Email</type>
</CustomField>