metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerContactFirstName__c</fullName>
    <description>OOB this is the FirstName of the Primary Contact if one is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Customer Contact Details - First Name of the customer contact</inlineHelpText>
    <label>Customer Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>