metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerContactPhone__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerContactPhone__c</fullName>
    <description>OOB this is the Phone of the Primary Contact if one is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Customer Contact Details - Primary Phone of the customer contact</inlineHelpText>
    <label>Customer Contact Phone</label>
    <type>Phone</type>
</CustomField>