metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerDUNS__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerDUNS__c</fullName>
    <description>OOB this is the DunsNumber of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Unique Customer Identifier managed by Dun &amp; Bradstreet</inlineHelpText>
    <label>Customer DUNS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>