metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerPostalCode__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerPostalCode__c</fullName>
    <description>OOB this is the BillingPostalCode of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Address of the end customer on the Referral - Postal Code</inlineHelpText>
    <label>Customer Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>