metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerState__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerState__c</fullName>
    <description>OOB this is the BillingState of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Address of the end customer on the Referral - State</inlineHelpText>
    <label>Customer State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>