metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__CustomerWebsite__c.field-meta.xml
<CustomField>
    <fullName>workspan__CustomerWebsite__c</fullName>
    <description>OOB this is the Website of the Account that is selected on the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Website of the end customer on the Referral</inlineHelpText>
    <label>Customer Website</label>
    <type>Url</type>
</CustomField>