metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__DealSize__c.field-meta.xml
<CustomField>
    <fullName>workspan__DealSize__c</fullName>
    <description>OOB this is the Amount from the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Deal size of the Referral</inlineHelpText>
    <label>Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>