metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__EditByIntegration__c.field-meta.xml
<CustomField>
    <fullName>workspan__EditByIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal flag indicating that current update is made by integration and should bypass some validations</description>
    <inlineHelpText>Internal flag indicating that current update is made by integration and should bypass some validations</inlineHelpText>
    <label>Edit By Integration</label>
    <type>Checkbox</type>
</CustomField>