metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__EditedBy__c.field-meta.xml
<CustomField>
    <fullName>workspan__EditedBy__c</fullName>
    <label>Edited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>