metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ForecastValue__c.field-meta.xml
<CustomField>
    <fullName>workspan__ForecastValue__c</fullName>
    <description>OOB this is the ExpectedRevenue from the Opportunity, but it can be changed on the Field Mapping page of the WorkSpan Admin tab.</description>
    <inlineHelpText>Forecasted value of the Referral</inlineHelpText>
    <label>Forecast Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>