metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__ForecastValueCurrency__c.field-meta.xml
<CustomField>
    <fullName>workspan__ForecastValueCurrency__c</fullName>
    <description>A 3-letter currency code that is populated from WorkSpan in case you don&apos;t have this currency enabled in your org. See the user guide for more details.</description>
    <inlineHelpText>Currency code of the Forecast Value amount</inlineHelpText>
    <label>Forecast Value Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>