metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleAccountDomain__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleAccountDomain__c</fullName>
    <inlineHelpText>Domain name of the customer per Google</inlineHelpText>
    <label>Google Account Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>