metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleContractVehicle__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleContractVehicle__c</fullName>
    <label>Google Contract Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Partner Contract</fullName>
            </value>
            <value>
                <fullName>Not known at this time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>