metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleCustomerIndustry__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleCustomerIndustry__c</fullName>
    <inlineHelpText>Industry that the customer belongs to</inlineHelpText>
    <label>Google Customer Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>