metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleDealTerm__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleDealTerm__c</fullName>
    <inlineHelpText>Deal term required by Google</inlineHelpText>
    <label>Deal Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>