metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleDealTransactionType__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleDealTransactionType__c</fullName>
    <inlineHelpText>Deal transaction type required by Google</inlineHelpText>
    <label>Deal Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>