metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleDeliveryModel__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleDeliveryModel__c</fullName>
    <label>Delivery Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VM on customer tenancy</fullName>
            </value>
            <value>
                <fullName>SaaS on GCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>