metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleEngagementModel__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleEngagementModel__c</fullName>
    <inlineHelpText>Engagement model required by Google</inlineHelpText>
    <label>Google Engagement Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>