metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleHasCustomerRequestedToBeContacted__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleHasCustomerRequestedToBeContacted__c</fullName>
    <inlineHelpText>Specify whether customers has requested to be contacted or not</inlineHelpText>
    <label>Has Customer Requested To Be Contacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>