metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleISVSolutionConnectDeal__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleISVSolutionConnectDeal__c</fullName>
    <inlineHelpText>Specify whether it&apos;s an ISV Solution Connect Deal or not</inlineHelpText>
    <label>ISV Solution Connect Deal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>workspan__YesNo</valueSetName>
    </valueSet>
</CustomField>