metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleNumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleNumberOfEmployees__c</fullName>
    <inlineHelpText>Approximate number of employees that the customer has</inlineHelpText>
    <label>Number Of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>