metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GooglePartnerVectorId__c.field-meta.xml
<CustomField>
    <fullName>workspan__GooglePartnerVectorId__c</fullName>
    <inlineHelpText>Partner&apos;s unique reference in Google&apos;s system</inlineHelpText>
    <label>Partner Vector Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>