metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GooglePrimaryProductOfInterest__c.field-meta.xml
<CustomField>
    <fullName>workspan__GooglePrimaryProductOfInterest__c</fullName>
    <inlineHelpText>Primary product of interest for the prospect</inlineHelpText>
    <label>Primary Product Of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chrome Enterprise</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform</fullName>
            </value>
            <value>
                <fullName>Google Maps Platform</fullName>
            </value>
            <value>
                <fullName>Google Workspace</fullName>
            </value>
            <value>
                <fullName>Professional Services Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>