metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleSubmittorEmail__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleSubmittorEmail__c</fullName>
    <inlineHelpText>Email of the person submitting the referral to Google. This account must be registered with Google.</inlineHelpText>
    <label>Submitter Email</label>
    <type>Email</type>
</CustomField>