metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleSummaryOfOpportunity__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleSummaryOfOpportunity__c</fullName>
    <inlineHelpText>Provide brief summary of the opportunity here</inlineHelpText>
    <label>Summary Of Opportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>