metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__GoogleSummaryOfSupport__c.field-meta.xml
<CustomField>
    <fullName>workspan__GoogleSummaryOfSupport__c</fullName>
    <inlineHelpText>Summary of support required by Google</inlineHelpText>
    <label>Google Summary Of Support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical support</fullName>
            </value>
            <value>
                <fullName>Transaction related support (POC/GCP Marketplace/Procurement)</fullName>
            </value>
            <value>
                <fullName>Up-selling/Renewal/Cross-selling support</fullName>
            </value>
            <value>
                <fullName>Align sales/account strategy</fullName>
            </value>
            <value>
                <fullName>Already in touch with the Google Cloud Sales Team</fullName>
            </value>
            <value>
                <fullName>Other (Please use &apos;Summary of the Opportunity&apos; field for explanation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>