metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__HelpNeededFromMicrosoft__c.field-meta.xml
<CustomField>
    <fullName>workspan__HelpNeededFromMicrosoft__c</fullName>
    <inlineHelpText>Partner&apos;s primary need from Microsoft on the opportunity. If you select &apos;No help required at this point of time&apos;, the Referral will be tagged as &apos;Partner Lead&apos; and, for such Referrals, you can change this value after submission. If you select any other value, the Referral will be tagged as &apos;Co-sell&apos; and the value cannot be changed after submission.</inlineHelpText>
    <label>Help Needed from Microsoft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GeneralOrOther</fullName>
                <label>General or Other</label>
            </value>
            <value>
                <fullName>CustomerTechnicalArchitecture</fullName>
                <label>Customer Technical Architecture</label>
            </value>
            <value>
                <fullName>ProofOfConceptOrDemo</fullName>
                <label>Proof of Concept / Demo</label>
            </value>
            <value>
                <fullName>QuotesOrLicensing</fullName>
                <label>Quotes / Licensing</label>
            </value>
            <value>
                <fullName>PostSalesCustomerSuccess</fullName>
                <label>Post Sales Customer Success</label>
            </value>
            <value>
                <fullName>WorkloadSpecificValueProposition</fullName>
                <label>Workload Specific Value Proposition</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <label>No help required at this point of time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>