metadata/sf-prod/force-app/main/default/objects/workspan__Referral__c/fields/workspan__HelpNeededFromPartner__c.field-meta.xml
<CustomField>
    <fullName>workspan__HelpNeededFromPartner__c</fullName>
    <description>This field is deprecated. HelpNeededFromMicrosoft__c must be used instead.</description>
    <inlineHelpText>This field is deprecated. HelpNeededFromMicrosoft__c must be used instead.</inlineHelpText>
    <label>Help Needed From Partner (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>